--- a/index.html
+++ b/index.html
@@ -21,23 +21,24 @@
   <header class="py-4 bg-gray-800 shadow-md">
 
     <div class="container mx-auto flex items-center">
-      <img src="images/logomark.webp" alt="Logo Swtco" class="rounded-lg w-12 mr-4" />
+      <img src="images/logomark.webp" alt="Logo Swtco" class="rounded-lg w-12 m-4" />
       <a href="#" class="text-4xl font-bold">Swtco</a>
-      <form action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="flex ml-auto">
+      <!-- <form action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="flex ml-auto">
         <input type="text" placeholder="Email" class="bg-gray-700 border-gray-600 border rounded-l px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
         <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-r px-4 py-2 focus:outline-none">Sign In</button>
-      </form>
-    </div>
+      </form> -->
+    </div>  
 
-   <!-- <div class="container mx-auto flex justify-between items-left">
+<!--
+    <div class="container mx-auto flex justify-between items-left">
       <img src="images/logomark.webp" alt="Logo Swtco" class="rounded-lg" />
       <a href="#" class="text-xl font-bold">Swtco</a>
       <form action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="flex items-center">
         <input type="text" placeholder="Email" class="bg-gray-700 border-gray-600 border rounded-l px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
         <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-r px-4 py-2 focus:outline-none">Sign In</button>
       </form>
-    </div> -->
-  </header>
+    </div>
+  </header> -->
 
   <main>
 
@@ -59,15 +60,15 @@
     </section>
     -->
     <section class="py-24 bg-gray-800">
-      <div class="container mx-auto flex items-center justify-between">
+      <div class="container mx-auto flex items-center justify-between m-4">
         <div class="max-w-md flex-1/3" data-aos="fade-right">
           <h1 class="text-4xl font-bold mb-4">You'll never train alone</h1>
           <p class="text-gray-400 mb-8">Because sport is about freedom,</br>as much at it is about sharing moments. </br>We are building an App to conciliate theses values.</p>
           <a href="#" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded px-6 py-3 focus:outline-none">Get early access</a>
         </div>
-        <div class="max-w-md flex-2/3" data-aos="fade-left">
+        <div class="max-w-md m-4 flex-2/3" data-aos="fade-left">
           <div class="flex">
-            <img src="images/iphone-16-pro.png" alt="Placeholder Image" class="w-1/2 rounded-lg shadow-lg mr-12" />
+            <img src="images/iphone-16-pro.png" alt="Placeholder Image" class="w-1/2 rounded-lg shadow-lg" />
             <img src="images/iphone-12-render-week-1-1-1.svg" alt="Placeholder Image" class="w-1/2 rounded-lg shadow-lg mr-12" />
           </div>
         </div>
