--- a/index.html
+++ b/index.html
@@ -108,6 +108,22 @@
       <div class="container mx-auto">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <div data-aos="fade-right">
+
+            <form name="contact" netlify>
+              <p>
+                <label>Name <input type="text" name="name" /></label>
+              </p>
+              <p>
+                <label>Email <input type="email" name="email" /></label>
+              </p>
+              <p>
+                <button type="submit">Send</button>
+              </p>
+            </form>
+
+
+
+
             <form action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="bg-gray-700 p-6 rounded-lg shadow-md">
               <div class="mb-4">
                 <h2 class="text-3xl font-bold mb-12 text-center">Ready to take-off?</h2>
