--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!--
             <form name="contact" netlify>
               <p>
-                <label>Email <input type="email" name="email" /></label>
+                <label>Email<input type="email" name="email" /> </label>
               </p>
               <p>
                 <button type="submit">Send</button>
@@ -127,7 +127,7 @@
               </div>
               <div class="mb-4">
                 <label for="email" class="block text-gray-400 font-medium mb-2">Email</label>
-                <input type="email" id="email" placeholder="your@email.com" class="bg-gray-600 border-gray-500 border rounded px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
+                <input type="email" name="email" id="email" placeholder="your@email.com" class="bg-gray-600 border-gray-500 border rounded px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
                 <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded px-6 py-3 focus:outline-none">Sign In</button>
               </div>
             </form>
