--- a/index.html
+++ b/index.html
@@ -17,48 +17,15 @@
     });
   </script>
 </head>
-<body class="bg-gray-900 text-gray-200">
-  <header class="py-4 bg-gray-800 shadow-md">
-
-    <div class="container mx-auto flex items-center">
+<body class="bg-gray-900 text-gray-200" style="background-color: #1F2937;">
+  <header class="py-4 bg-gray-800">
+    <div class="container mx-auto px-4 sm:px-8 md:px-16 flex items-center">
       <img src="images/logomark.webp" alt="Logo Swtco" class="rounded-lg w-12 m-4" />
       <a href="#" class="text-4xl font-bold">Swtco</a>
-      <!-- <form action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="flex ml-auto">
-        <input type="text" placeholder="Email" class="bg-gray-700 border-gray-600 border rounded-l px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
-        <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-r px-4 py-2 focus:outline-none">Sign In</button>
-      </form> -->
-    </div>  
-
-<!--
-    <div class="container mx-auto flex justify-between items-left">
-      <img src="images/logomark.webp" alt="Logo Swtco" class="rounded-lg" />
-      <a href="#" class="text-xl font-bold">Swtco</a>
-      <form action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="flex items-center">
-        <input type="text" placeholder="Email" class="bg-gray-700 border-gray-600 border rounded-l px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
-        <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-r px-4 py-2 focus:outline-none">Sign In</button>
-      </form>
     </div>
-  </header> -->
+  </header>
 
-  <main>
-
-    <!--
-    <section class="py-24 bg-gray-800">
-      <div class="container mx-auto flex items-center justify-between">
-        <div class="max-w-md" data-aos="fade-right">
-          <h1 class="text-4xl font-bold mb-4">You'll never train alone</h1>
-          <p class="text-gray-400 mb-8">Because sport is about freedom,</br>as much at it is about sharing moments. </br>We are building an App to conciliate theses values.</p>
-          <a href="#" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded px-6 py-3 focus:outline-none">Get early access</a>
-        </div>
-        <div class="max-w-md" data-aos="fade-left">
-          <div class="flex w-2/3">
-            <img src="images/iphone-16-pro.png" alt="Placeholder Image" class="w-1/2 rounded-lg shadow-lg"/>
-            <img src="images/iphone-16-pro.png" alt="Placeholder Image" class="w-1/2 rounded-lg shadow-lg"/>
-          </div>
-        </div>
-      </div>
-    </section>
-    -->
+  <main class="mx-4 sm:mx-8 md:mx-16 my-4 sm:my-8 md:my-12">
     <section class="py-24 bg-gray-800">
       <div class="container mx-auto flex items-center justify-between m-4">
         <div class="max-w-md flex-1/3" data-aos="fade-right">
@@ -104,61 +71,59 @@
       </div>
     </section>
 
-    <section class="py-24 bg-gray-800">
-      <div class="container mx-auto">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-          <div data-aos="fade-right">
-<!--
-            <form name="contact" netlify>
-              <p>
-                <label>Email<input type="email" name="email" /> </label>
-              </p>
-              <p>
-                <button type="submit">Send</button>
-              </p>
-            </form>
--->
-
-
-            <form name="contact" netlify class="bg-gray-700 p-6 rounded-lg shadow-md">
-              <div class="mb-4">
-                <h2 class="text-3xl font-bold mb-12 text-center">Ready to take-off?</h2>
-                <p class="text-gray-400 mb-4">Leave us your email to stay in the loop and get early access</p>
-              </div>
-              <div class="mb-4">
-                <label for="email" class="block text-gray-400 font-medium mb-2">Email</label>
-                <input type="email" name="email" id="email" placeholder="your@email.com" class="bg-gray-600 border-gray-500 border rounded px-4 py-2 text-gray-200 focus:outline-none focus:ring focus:border-blue-500" />
-                <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-medium rounded px-6 py-3 focus:outline-none">Sign In</button>
-              </div>
-            </form>
+    <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+      <form name="contact" netlify class="bg-gray-700 p-6 rounded-lg shadow-md">
+        <div class="mb-4">
+          <h2 class="text-3xl font-bold mb-12 text-center">Ready to take-off?</h2>
+          <p class="text-gray-400 mb-4">Leave us your email to stay in the loop and get early access</p>
+        </div>
+        <div class="mb-4">
+          <label for="email" class="block text-gray-400 font-medium mb-2">Email</label>
+          <div class="flex space-x-2">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="you@email.com"
+              class="bg-gray-600 border-gray-500 border px-4 py-3 flex-grow text-gray-200 focus:outline-none focus:ring focus:border-blue-500 rounded-l"
+            />
+            <button
+              type="submit"
+              class="bg-blue-500 hover:bg-blue-600 text-white font-medium px-6 py-3 focus:outline-none rounded"
+            >
+              Sign In
+            </button>
           </div>
-
-          <div data-aos="fade-left">
-            <div action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="bg-gray-700 p-6 rounded-lg shadow-md">
-              <div class="mb-4">
-                <h2 class="text-3xl font-bold mb-12 text-center">Want to be part of?</h2>
-                <p class="text-gray-400 mb-4">Swtco is an ongoing projet. For feedback or collaboration, please write us</p>
-              </div>
-              <div class="flex justify-center">
-              <button type="button" class="flex align-center bg-blue-500 hover:bg-blue-600 text-white font-medium rounded px-6 py-3 focus:outline-none" onclick="window.location.href='mailto:contact@swtco.de'">info@swtco.de</button>
-            </div>
-            </div>
+        </div>
+      </form>
+      <div data-aos="fade-left" class="flex flex-col h-full">
+        <div action="https://usebasin.com/f/6b38ca9436b4" method="POST" class="bg-gray-700 p-6 rounded-lg shadow-md flex-grow">
+          <div class="mb-4">
+            <h2 class="text-3xl font-bold mb-12 text-center">Want to be part of?</h2>
+            <p class="text-gray-400 mb-4">Swtco is an ongoing projet. For feedback or collaboration, please write us</p>
+          </div>
+          <div class="flex justify-center">
+            <button
+              type="button"
+              class="flex align-center bg-blue-500 hover:bg-blue-600 text-white font-medium rounded px-6 py-3 focus:outline-none"
+              onclick="window.location.href='mailto:contact@swtco.de'">
+              info@swtco.de
+            </button>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
   </main>
 
-<footer class="bg-gray-800 py-8">
-  <div class="container mx-auto flex justify-between items-center text-white-400">
-      <div class="flex items-center">
-        <img src="images/logomark.webp" alt="Swtco Logo" class="h-6 w-6 mr-2" />
-          <span class="font-bold">Swtco</span>
+  <footer class="py-8 bg-gray-800">
+    <div class="container mx-auto px-4 sm:px-8 md:px-16">
+      <div class="flex justify-between items-center">
+        <p class="text-gray-400">2025 Swtco - work in progress.</p>
+        <div class="flex space-x-4">
+          <a href="terms.html" class="text-gray-400 hover:text-white">Terms and Info</a>
+        </div>
       </div>
-      <div>
-          <a href="mailto:contact@swtco.de" class="text-400 hover:text-blue-500">Contact</a>
-      </div>
-  </div>
-</footer>
-
+    </div>
+  </footer>
 </body>
 </html>
